<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackjack"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/credit"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dcredit"
        android:src="@drawable/credit"
        app:layout_constraintEnd_toStartOf="@+id/bet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/dbet"
        android:src="@drawable/bet"
        app:layout_constraintBottom_toBottomOf="@+id/credit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/credit"
        app:layout_constraintTop_toTopOf="@+id/credit" />

    <ImageView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rules"
        android:src="@drawable/nadpis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <ImageView
        android:id="@+id/coin1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/coin1"
        android:src="@drawable/coin1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/coin5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/coin5"
        android:src="@drawable/coin5"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin1" />

    <ImageView
        android:id="@+id/coin10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/coin10"
        android:src="@drawable/coin10"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin5" />

    <ImageView
        android:id="@+id/coin25"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/coin25"
        android:src="@drawable/coin25"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin10" />

    <ImageView
        android:id="@+id/coin100"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/coin100"
        android:src="@drawable/coin100"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin25" />

    <ImageView
        android:id="@+id/btnDeal"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginBottom="104dp"
        android:src="@drawable/deal"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/dealer1"

        android:layout_width="100dp"
        android:layout_height="152dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/dealer2"

        android:layout_width="98dp"
        android:layout_height="152dp"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dealer3"

        android:layout_width="98dp"
        android:layout_height="152dp"
        android:layout_marginLeft="212dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dealer4"

        android:layout_width="98dp"
        android:layout_height="152dp"
        android:layout_marginLeft="212dp"
        android:layout_marginStart="234dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dealer5"

        android:layout_width="98dp"
        android:layout_height="152dp"
        android:layout_marginLeft="212dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/player1"

        android:layout_width="100dp"
        android:layout_height="152dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="292dp"
        android:layout_marginRight="292dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/player2"

        android:layout_width="98dp"
        android:layout_height="152dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="220dp"
        android:layout_marginRight="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/player3"

        android:layout_width="98dp"
        android:layout_height="152dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/player4"

        android:layout_width="98dp"
        android:layout_height="152dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/player5"

        android:layout_width="98dp"
        android:layout_height="152dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btnHit"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginBottom="104dp"
        android:src="@drawable/hit"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btnStand"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginBottom="104dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:src="@drawable/stand"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDeal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnDouble" />

    <ImageView
        android:id="@+id/btnDouble"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginBottom="104dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/btndouble"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtcredit"
        android:layout_width="118dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/credit"
        app:layout_constraintBottom_toBottomOf="@+id/credit"
        app:layout_constraintEnd_toEndOf="@+id/credit"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="@+id/credit"
        app:layout_constraintTop_toTopOf="@+id/credit"
        app:layout_constraintVertical_bias="0.500" />

    <TextView
        android:id="@+id/txtbet"
        android:layout_width="118dp"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/bet"
        app:layout_constraintBottom_toBottomOf="@+id/bet"
        app:layout_constraintEnd_toEndOf="@+id/bet"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/credit"
        app:layout_constraintTop_toTopOf="@+id/bet"
        app:layout_constraintVertical_bias="0.500" />

    <TextView
        android:id="@+id/txtDilarPoint"
        android:layout_width="79dp"
        android:layout_height="38dp"
        android:layout_marginBottom="112dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/dealer1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPlayerPoint"
        android:layout_width="74dp"
        android:layout_height="39dp"
        android:layout_marginBottom="112dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/player1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgTextlost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rules"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start New Game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

</androidx.constraintlayout.widget.ConstraintLayout>