<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackjack"
    android:configChanges="orientation"
    android:screenOrientation="portrait"
    tools:context=".BlackjackActivity">


    <ImageView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        app:srcCompat="@drawable/nadpis" />

    <ImageView
        android:id="@+id/bet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/dbet"
        android:src="@drawable/bet"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp" />


    <ImageView
        android:id="@+id/dealer1"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dealer2"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dealer3"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="212dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dealer4"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="212dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dealer5"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="212dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dealer6"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="212dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dealer7"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="212dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/player1"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginBottom="152dp"
        android:rotation="-20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/player2"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginBottom="152dp"
        android:rotation="-5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.450"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/player3"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginBottom="152dp"
        android:rotation="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.570"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/player4"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginBottom="152dp"
        android:rotation="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.680"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/player5"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginBottom="148dp"
        android:rotation="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.780"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/player6"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginBottom="140dp"
        android:rotation="15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.880"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/player7"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginBottom="130dp"
        android:rotation="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.980"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imgTextlost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/busted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coin1"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/coin1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/coin5"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/coin5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin1" />

    <ImageView
        android:id="@+id/coin10"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/coin10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin5" />

    <ImageView
        android:id="@+id/coin25"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/coin25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin10" />

    <ImageView
        android:id="@+id/btnDeal"
        android:layout_width="92dp"
        android:layout_height="61dp"
        android:layout_marginBottom="96dp"
        android:src="@drawable/deal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btnStand"
        android:layout_width="92dp"
        android:layout_height="61dp"
        android:layout_marginBottom="96dp"
        android:src="@drawable/stand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btnHit"
        android:layout_width="92dp"
        android:layout_height="61dp"
        android:src="@drawable/hit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btnDouble"
        android:layout_width="92dp"
        android:layout_height="61dp"
        android:layout_marginBottom="96dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/btndouble"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtcredit"
        android:layout_width="518px"
        android:layout_height="162px"
        android:layout_marginTop="32dp"
        android:background="@drawable/credit"
        android:gravity="center"
        android:text="@string/credit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtbet"
        android:layout_width="518px"
        android:layout_height="162px"
        android:layout_marginTop="4dp"
        android:background="@drawable/bet"
        android:gravity="center"
        android:text="@string/bet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1" />

    <TextView
        android:id="@+id/txtDilarPoint"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dealer1"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/txtPlayerPoint"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="168dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/player1"
        app:layout_constraintEnd_toEndOf="@+id/player1"
        app:layout_constraintEnd_toStartOf="@+id/player2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/rebet"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="81dp"
        android:layout_height="66dp"
        android:layout_marginBottom="12dp"
        android:src="@android:drawable/ic_popup_sync"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/cansel"
        android:layout_width="50dp"
        android:layout_height="37dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/x"
        app:layout_constraintBottom_toTopOf="@+id/txtbet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>